--- a/style.css
+++ b/style.css
@@ -14,23 +14,40 @@ p{
 }
 /* CSS */
 .button-33 {
-    background-color: #2c2c2c;
-    border-radius: 100px;
-    color: #ffcdb1;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Radwave;
-    padding: 7px 20px;
     text-align: center;
+    border-top: 1px solid rgba(98, 98, 98, 0.805);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.849);
     text-decoration: none;
-    transition: all 250ms;
-    border: 0;
-    font-size: 16px;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+    display: block;
+    width: 45%;
+    height: 25px;
+    background: #323232;
+    padding: 15px 30px 35px 30px;
+    text-align: center;
+    border-radius: 14px;
+    color: white;
+    line-height: 25px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin: 0 auto;
+    transform: scale(1);
+    transition: 0.5s all;
+    transform:scale(1.3);
+    cursor: pointer;
+    font-family: Radwave;
 }
 
+.socialbutton {
+    transform: scale(1) rotate(0deg);
+    transition: 0.5s all;
+}
+
+.socialbutton:hover {
+    transform: scale(1.15) rotate(-1deg);
+}
     .button-33:hover {
-        transform: scale(1.05) rotate(-1deg);
+        transform: scale(1.55) rotate(-1deg);
     }
+
+
+
